add quiz 1st page

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -2,3 +2,14 @@
 .bg-color {
  background-color: #f4f4f4;
 }
+.text-color{
+color: #42307D;
+}
+.text-subcaption{
+font-size: .6rem;
+color: #616161;;
+}
+.titleFont{
+font-size: .9rem;
+font-weight: 500;
+}
